compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__preassign_assignment.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go(x) {\n  let y = case x() {\n    True -> 1\n    _ -> 0\n  }\n  y\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  let y = case x() {
    True -> 1
    _ -> 0
  }
  y
}


----- COMPILED JAVASCRIPT
export function go(x) {
  let _block;
  let $ = x();
  if ($) {
    _block = 1;
  } else {
    _block = 0;
  }
  let y = _block;
  return y;
}
