compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__semicolon_exists_with_case.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go() {\n  case #(1, 2) {\n    #(2, b) -> b\n    #(1, 3) -> 2\n    #(a, _) -> a\n  }\n  {2 + 4} * 2\n}"
---
----- SOURCE CODE

pub fn go() {
  case #(1, 2) {
    #(2, b) -> b
    #(1, 3) -> 2
    #(a, _) -> a
  }
  {2 + 4} * 2
}

----- COMPILED JAVASCRIPT
export function go() {
  let $ = [1, 2];
  let $1 = $[0];
  if ($1 === 2) {
    let b = $[1];
    b;
  } else if ($1 === 1 && $[1] === 3) {
    2;
  } else {
    let a = $1;
    a;
  }
  return (2 + 4) * 2;
}
