compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__single_choice_switch_does_not_bind_subject.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub type Wibble {\n  Wibble(Int, Int)\n  Wobble\n}\n\npub fn go(x) {\n  case x {\n    Wibble(1, 2) -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(Int, Int)
  Wobble
}

pub fn go(x) {
  case x {
    Wibble(1, 2) -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor($0, $1) {
    super();
    this[0] = $0;
    this[1] = $1;
  }
}
export const Wibble$Wibble = ($0, $1) => new Wibble($0, $1);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$0 = (value) => value[0];
export const Wibble$Wibble$1 = (value) => value[1];

export class Wobble extends $CustomType {}
export const Wibble$Wobble$const = new Wobble();
export const Wibble$Wobble = () => Wibble$Wobble$const;
export const Wibble$isWobble = (value) => value instanceof Wobble;

export function go(x) {
  if (x instanceof Wibble && x[0] === 1 && x[1] === 2) {
    return 1;
  } else {
    return 2;
  }
}
