compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__single_clause_variables_assigned.snap
---
source: compiler-core/src/javascript/tests/case.rs
assertion_line: 258
expression: "\npub fn main() {\n  let text = \"first defined\"\n  let other = case \"defined again\" {\n    text -> Nil\n  }\n  let text = \"a third time\"\n}\n"
---
export function main() {
  let text = "first defined";
  let other = (() => {
    let $ = "defined again";
    {
      let text$1 = $;
      return undefined;
    }
  })();
  let text$1 = "a third time";
  return text$1;
}
